Update the file names

--- a/app/views/fetf/claim/v1-1/invoice/check-answers-invoice.html
+++ b/app/views/fetf/claim/v1-1/invoice/check-answers-invoice.html
@@ -68,7 +68,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">invoice-1.pdf</a>, 2 MB
+              <a href="#">SupplierA-invoice.pdf</a>, 55 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -94,7 +94,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">invoice-2.pdf</a>, 2 MB
+              <a href="#">SupplierB-invoice.pdf</a>, 54 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
