--- a/app/views/fetf/claim/v1-1/photos/check-answers.html
+++ b/app/views/fetf/claim/v1-1/photos/check-answers.html
@@ -70,7 +70,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-1.pdf</a>, 2 MB
+              <a href="#">Bracken1.pdf</a>, 5.1 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -95,7 +95,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-2.pdf</a>, 2 MB
+              <a href="#">Bracken2.pdf</a>, 3.8 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -120,7 +120,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-3.pdf</a>, 2 MB
+              <a href="#">Bracken3.pdf</a>, 5.5 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -146,7 +146,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-4.pdf</a>, 2 MB
+              <a href="#">Aerator1.pdf</a>, 5.2 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -173,7 +173,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-5.pdf</a>, 2 MB
+              <a href="#">Aerator2.pdf</a>, 341 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -200,7 +200,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-6.pdf</a>, 2 MB
+              <a href="#">Controller.pdf</a>, 507 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
