--- a/app/views/fetf/claim/v1-1/serial-number/variable-serial.html
+++ b/app/views/fetf/claim/v1-1/serial-number/variable-serial.html
@@ -67,9 +67,9 @@ Upload4
             Variable rate controller serial number
           </label>
         </h1>
-        <div class="govuk-inset-text">
-          <strong>Full item name:</strong> Variable rate controller for seed drills, sprayers and fertiliser spreaders (FETF50)
-        </div>
+
+        <p class="govuk-body"><strong>Full item name:</strong> Variable rate controller for seed drills, sprayers and fertiliser spreaders</p>
+        
         <input class="govuk-input govuk-input--width-10" id="event-name" name="eventName" type="text">
       </div>
       
