--- a/app/views/fetf/claim/v1-1/statement/check-answers.html
+++ b/app/views/fetf/claim/v1-1/statement/check-answers.html
@@ -70,7 +70,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-1.pdf</a>, 2 MB
+              <a href="#">Statement1.pdf</a>, 63 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -96,7 +96,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-2.pdf</a>, 2 MB
+              <a href="#">Statement2.pdf</a>, 66 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -122,7 +122,7 @@ Upload4
               File
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-3.pdf</a>, 2 MB
+              <a href="#">Statement3.pdf</a>, 63 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
