--- a/app/views/fetf/claim/v1-2/item1/check-answers.html
+++ b/app/views/fetf/claim/v1-2/item1/check-answers.html
@@ -82,7 +82,7 @@ Upload4
               Invoices
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">invoice-1.pdf</a>, 2 MB
+              <a href="#">SupplierA-invoice.pdf</a>, 2 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -93,8 +93,8 @@ Upload4
               Statements
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-1.pdf</a>, 2 MB<br>
-              <a href="#">statement-2.pdf</a>, 2.1 MB
+              <a href="#">Statement1.pdf</a>, 2 MB<br>
+              <a href="#">Statement2.pdf</a>, 2.1 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -105,9 +105,9 @@ Upload4
               Photos
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-1.pdf</a>, 1.2 MB<br>
-              <a href="#">photo-2.pdf</a>, 2 MB<br>
-              <a href="#">photo-3.pdf</a>, 1.7 MB
+              <a href="#">Bracken1.pdf</a>, 1.2 MB<br>
+              <a href="#">Bracken2.pdf</a>, 2 MB<br>
+              <a href="#">Bracken3.pdf</a>, 1.7 MB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
