--- a/app/views/fetf/claim/v1-2/item2/check-invoice.html
+++ b/app/views/fetf/claim/v1-2/item2/check-invoice.html
@@ -52,7 +52,7 @@
               
           </ul>
       </div>
-      <p class="govuk-body">invoice-1.jpg, 2MB</p>
+      <p class="govuk-body">SupplierA-invoice.pdf, 55KB</p>
 
         
 <br><br><br>
