--- a/app/views/fetf/claim/v1-2/item2/check-statement2.html
+++ b/app/views/fetf/claim/v1-2/item2/check-statement2.html
@@ -52,7 +52,7 @@
               
           </ul>
       </div>
-      <p class="govuk-body">statement-2.jpg, 2MB</p>
+      <p class="govuk-body">Statement2.pdf, 66 KB</p>
 
         
 <br><br><br>
