--- a/app/views/fetf/claim/v1-2/item2/invoice-file-added.html
+++ b/app/views/fetf/claim/v1-2/item2/invoice-file-added.html
@@ -80,7 +80,7 @@ Upload4
                   File 1
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">invoice-1.pdf</a>, 2 MB
+                  <a href="#">SupplierA-invoice.pdf</a>, 55KB
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="#">Delete<span class="govuk-visually-hidden"> name</span></a>
