--- a/app/views/fetf/claim/v1-2/item2/previous-invoices.html
+++ b/app/views/fetf/claim/v1-2/item2/previous-invoices.html
@@ -56,7 +56,7 @@
                 <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
                 <label class="govuk-label govuk-checkboxes__label" for="waste">
                   <img src="/public/images/invoice1.jpg" alt="" class="thumbnail" >
-                  invoice-1.pdf, 2MB
+                  SupplierA-invoice.pdf, 55KB
                 </label>
               </div>
             </div>
