--- a/app/views/fetf/claim/v1-2/item2/statement-file-added.html
+++ b/app/views/fetf/claim/v1-2/item2/statement-file-added.html
@@ -80,7 +80,7 @@ Upload4
                   File 1
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">statement-1.pdf</a>, 2 MB
+                  <a href="#">Statement1.pdf</a>,63 KB
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="#">Delete<span class="govuk-visually-hidden"> name</span></a>
@@ -94,7 +94,7 @@ Upload4
 
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">statement-2.pdf</a>, 2 MB
+                  <a href="#">Statement1.pdf</a>, 66 KB
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="#">Delete<span class="govuk-visually-hidden"> name</span></a>
