--- a/app/views/fetf/claim/v1-2/item3/check-answers.html
+++ b/app/views/fetf/claim/v1-2/item3/check-answers.html
@@ -81,7 +81,7 @@ Upload4
               Invoices
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">invoice-1.pdf</a>, 2 MB
+              <a href="#">SupplierB-invoice.pdf</a>, 54 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -92,7 +92,7 @@ Upload4
               Statements
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-1.pdf</a>, 2 MB
+              <a href="#">Statement3.pdf</a>, 63 KB
              
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -104,8 +104,7 @@ Upload4
               Photos
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-1.pdf</a>, 1.2 MB<br>
-              <a href="#">photo-2.pdf</a>, 2 MB<br>
+              <a href="#">Controller.pdf</a>, 507 KB<br>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
