--- a/app/views/fetf/claim/v1-2/item2/check-answers.html
+++ b/app/views/fetf/claim/v1-2/item2/check-answers.html
@@ -81,7 +81,7 @@ Upload4
               Invoices
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">invoice-1.pdf</a>, 2 MB
+              <a href="#">SupplierA-invoice.pdf</a>, 55 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -92,8 +92,8 @@ Upload4
               Statements
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">statement-1.pdf</a>, 2 MB<br>
-              <a href="#">statement-2.pdf</a>, 2.1 MB
+              <a href="#">Statement1.pdf</a>, 63 KB<br>
+              <a href="#">Statement2.pdf</a>, 66 KB
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -104,8 +104,8 @@ Upload4
               Photos
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="#">photo-1.pdf</a>, 1.2 MB<br>
-              <a href="#">photo-2.pdf</a>, 2 MB<br>
+              <a href="#">Aerator1.pdf</a>, 5.2 MB<br>
+              <a href="#">Aerator2.pdf</a>, 341 KB<br>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
