--- a/app/views/fetf/claim/v1-2/item2/check-statement.html
+++ b/app/views/fetf/claim/v1-2/item2/check-statement.html
@@ -52,7 +52,7 @@
               
           </ul>
       </div>
-      <p class="govuk-body">statement-1.jpg, 2MB</p>
+      <p class="govuk-body">Statement1.pdf, 63 KB</p>
 
         
 <br><br><br>
