--- a/app/views/fetf/claim/v1-2/item2/previous-statements.html
+++ b/app/views/fetf/claim/v1-2/item2/previous-statements.html
@@ -56,7 +56,7 @@
                 <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
                 <label class="govuk-label govuk-checkboxes__label" for="waste">
                   <img src="/public/images/statement1.jpg" alt="" class="thumbnail" >
-                  statement-1.pdf, 2MB
+                  Statement1.pdf, 63 KB
                 </label>
               </div>
             </div>
@@ -65,7 +65,7 @@
                 <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
                 <label class="govuk-label govuk-checkboxes__label" for="waste">
                   <img src="/public/images/statement2.jpg" alt="" class="thumbnail" >
-                  statement-2.pdf, 2MB
+                  Statement2.pdf, 66 KB
                 </label>
               </div>
             </div>
@@ -74,7 +74,7 @@
                 <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
                 <label class="govuk-label govuk-checkboxes__label" for="waste">
                   <img src="/public/images/statement3.jpg" alt="" class="thumbnail" >
-                  statement-3.pdf, 2MB
+                  Statement3.pdf, 63 KB
                 </label>
               </div>
             </div>
