--- a/app/views/fetf/_includes/activity-list_task-section_claim_v1-2-1.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim_v1-2-1.html
@@ -1,7 +1,7 @@
 <li>
 
     {% if (data['fetf-claim'] == "01") %}
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
@@ -40,7 +40,7 @@
       
       </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -58,7 +58,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
       Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
    
     <ul class="govuk-task-list">
       
@@ -101,7 +101,7 @@
       
     </ul>
      
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -119,7 +119,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
      Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -159,7 +159,7 @@
      
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -175,7 +175,7 @@
 
     {% elif (data['fetf-claim'] == "01c") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -215,7 +215,7 @@
       
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -230,7 +230,7 @@
 
     {% elif (data['fetf-claim'] == "01d") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -268,7 +268,7 @@
       
     </ul>
 
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
@@ -284,7 +284,7 @@
 
     {% elif (data['fetf-claim'] == "01e") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -321,7 +321,7 @@
       
     </ul>
 
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
