--- a/app/views/fetf/_includes/activity-list_task-section_claim_v1-2.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim_v1-2.html
@@ -1,7 +1,7 @@
 <li>
 
     {% if (data['fetf-claim'] == "01") %}
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
@@ -47,7 +47,7 @@
       
       </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -65,7 +65,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
       Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
    
     <ul class="govuk-task-list">
       
@@ -117,7 +117,7 @@
       
     </ul>
      
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -135,7 +135,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
      Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -184,7 +184,7 @@
      
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -200,7 +200,7 @@
 
     {% elif (data['fetf-claim'] == "01c") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -247,7 +247,7 @@
       
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -262,7 +262,7 @@
 
     {% elif (data['fetf-claim'] == "01d") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -307,7 +307,7 @@
       
     </ul>
 
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
@@ -323,7 +323,7 @@
 
     {% elif (data['fetf-claim'] == "01e") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -368,7 +368,7 @@
       
     </ul>
 
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
