--- a/app/views/fetf/_includes/activity-list_task-section_claim_v1-1.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim_v1-1.html
@@ -1,7 +1,7 @@
 <li>
 
     {% if (data['fetf-claim'] == "01") %}
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
@@ -54,7 +54,7 @@
       </li>
       </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -72,7 +72,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
       Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
    
     <ul class="govuk-task-list">
       
@@ -133,7 +133,7 @@
       </li>
     </ul>
      
-    <h2 class="govuk-heading-m">Submit</h2>
+    <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -151,7 +151,7 @@
     <!-- <h2 class="govuk-prototype-kit-task-list__section">
      Submit claim
     </h2> -->
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -209,7 +209,7 @@
       </li>
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -225,7 +225,7 @@
 
     {% elif (data['fetf-claim'] == "01c") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -281,7 +281,7 @@
       </li>
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -296,7 +296,7 @@
 
     {% elif (data['fetf-claim'] == "01d") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -350,7 +350,7 @@
       </li>
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -364,7 +364,7 @@
 
     {% elif (data['fetf-claim'] == "01e") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -416,7 +416,7 @@
       </li>
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -432,7 +432,7 @@
 
     {% elif (data['fetf-claim'] == "01f") %}
 
-    <h2 class="govuk-heading-m">Check before you start</h2>
+    <h2 class="govuk-heading-m">Check items</h2>
     <ul class="govuk-task-list">
       
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
@@ -484,7 +484,7 @@
       </li>
     </ul>
 
-      <h2 class="govuk-heading-m">Submit</h2>
+      <h2 class="govuk-heading-m">Submit claim</h2>
       <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
