--- a/app/views/fetf/claim/v1-2-1/item3/previous-statements.html
+++ b/app/views/fetf/claim/v1-2-1/item3/previous-statements.html
@@ -48,9 +48,9 @@
                 Which statements do you want to use for the variable rate controller?
               </h1>
             </legend>
-            <!-- <div id="waste-hint" class="govuk-hint">
+            <div id="waste-hint" class="govuk-hint">
               Select all that apply.
-            </div> -->
+            </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
