--- a/app/views/fetf/claim/v1-1/statement/add-another3.html
+++ b/app/views/fetf/claim/v1-1/statement/add-another3.html
@@ -38,7 +38,7 @@
 
 
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Do you want to upload another bank statement?</h2> 
+        <h2 class="govuk-heading-l">Do you want to add another bank statement?</h2> 
       
       
       
