Claims post UR iteration & change request

--- a/app/views/fetf/_includes/activity-list_status-block.html
+++ b/app/views/fetf/_includes/activity-list_status-block.html
@@ -57,4 +57,12 @@
     RPA should complete the review by <strong>31 December 2024</strong>.
 </div>
 
+{% elif (data['fetf-status'] == "05") %}
+<!-- First claim window open -->
+
+<!-- <h3 class="govuk-heading-m">You can submit your claim</h3> -->
+<div class="govuk-inset-text">
+    RPA are reviewing your request to change items in your Grant Funding Agreement. They aim to get in touch with you by <strong>13 Novemeber 2024</strong>.
+</div>
+
 {% endif %}
