--- a/app/views/index.html
+++ b/app/views/index.html
@@ -278,6 +278,20 @@
 <h3 class="govuk-heading-m">Claim</h3>
 
 
+
+<h4 class="govuk-heading-s">User Research - Round 5 (October 2024)</h4>
+
+<p class="govuk-body">Prototype (Heroku), scenario with 2 items:<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/fetf/claim/v5-0/start-claim" target="_blank">FETF Claim v5 (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
+
+
+
+
+
 <h4 class="govuk-heading-s">User Research - Round 4 (September 2024)</h4>
 <p class="govuk-body">Prototype (Heroku), scenario with 3 items:<br>
   <ul class="govuk-list govuk-list--bullet">
