update return design

--- a/app/views/fetf/claim/v5-0/item1/check-answered-serial.html
+++ b/app/views/fetf/claim/v5-0/item1/check-answered-serial.html
@@ -69,7 +69,12 @@ Upload4
               Serial numbers
             </dt>
             <dd class="govuk-summary-list__value">
-              <a href="serial-number-return">Add serial number</a>
+              12123213234<br>
+              12312312234<br>
+              123123121122<br>
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
             </dd>
             
           </div>
