Final check answers page before submitting

--- a/app/views/fetf/_includes/activity-list_task-section_claim_v5-0.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim_v5-0.html
@@ -327,7 +327,7 @@
     <ul class="govuk-task-list">
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="../../claim/v5-0/submit" aria-describedby="application-details-2-status">Submit</a>
+        <a class="govuk-link govuk-task-list__link" href="../../claim/v5-0/submit-check" aria-describedby="application-details-2-status">Submit</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
